K8s/base/frontendproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendproxy
  labels:
    app: frontendproxy
    app.kubernetes.io/version: "1.12.0"
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontendproxy
  template:
    metadata:
      labels:
        app: frontendproxy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
      containers:
        - name: frontendproxy
          image: ghcr.io/open-telemetry/demo:1.12.0-frontendproxy
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: service
          livenessProbe:
            httpGet:
              path: /ready
              port: 10000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "50m"
              memory: "25Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
