K8s/base/frontendproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendproxy
  labels:
    app: frontendproxy
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  selector:
    app: frontendproxy
  ports:
    - name: tcp-service
      port: 8080
      targetPort: 8080
