K8s/base/frontendproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontendproxy
  labels:
    app: frontendproxy
    app.kubernetes.io/part-of: opentelemetry-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendproxy
                port:
                  number: 8080
